--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Next_step"></activity>
-        <activity android:name=".Question" />
+        <activity android:name=".Next_step"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".Question"
+            android:theme="@style/AppTheme.NoActionBar"
+            >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.abc.Home" />
+        </activity>
+
         <activity
             android:name=".Home"
             android:label="@string/title_activity_home"
